<resources>
    <string name="app_name">FaceT</string>
    <string name="facebook_app_id">1569918259976009</string>
    <string name="facepp_API_Key">OytSFWSQ5LjdawAnmtcDy4pLNS2G2BiV</string>
    <string name="facepp_API_Secret">g8iOcxpavpCYVdjIhCKw-IFarruXIc3Z</string>
    <string name="save_message1">"You don't have chosen converted picture to save"</string>
    <string name="save_message2">"Saved successfully"</string>
    <string name="save_message3">"Saving in the original quality can take a while"</string>
    <string name="wait">"Pictures are loading"</string>
    <string name="too_large_image">"Picture is too large, choose smaller one"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_facet_match">FaceT Match</string>
    <string name="nav_vmakeup_label">Virtual Makeup</string>
    <string name="nav_product_label">Product</string>
    <string name="nav_store_location_label">Store Location</string>
    <string name="nav_profile_label">Profile</string>
    <string name="nav_settings_label">Settings</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="product_apply">Apply</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="user_name">Name</string>
    <string name="recently_match_text">Recently Match</string>
    <string name="original_text">Original</string>
    <string name="converted_image1">Effect 1</string>
    <string name="converted_image2">Effect 2</string>
    <string name="converted_image3">Effect 3</string>
    <string name="no_account_text">No account? Register now</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="or_text">Or</string>
    <string name="login_text">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="remember_password_field">Remember Password</string>
    <string name="store_text">Store Locator</string>
    <string name="vmakeup_text">Virtual Makeup</string>
    <string name="my_account_text">My Account</string>
    <string name="facet_match_text">FaceT Match</string>
    <string name="all_products_text">All Products</string>
    <string-array name="category_type_array">
        <item>All</item>
        <item>Foundation</item>
        <item>Brush</item>
        <item>Eyeshadows</item>
        <item>Lipsticks</item>
    </string-array>
    <string-array name="sort_type_array">
        <item>Latest</item>
        <item>Product Name</item>
        <item>Category</item>
        <item>Rating</item>
    </string-array>
    <string name="create_product_title">Create Product</string>
    <string name="product_title_hint">Product Title...</string>
    <string name="product_description_hint">Product Description...</string>
    <string name="product_brand_hint">Product Brand</string>
    <string name="step1_title_text">Product Information</string>
    <string name="cancel_text">Cancel</string>
    <string name="vertical_form_stepper_form_continue">Next</string>
    <string name="vertical_form_stepper_form_confirm_button">Create Product</string>
    <string-array name="product_type_array">
        <item>Product Category</item>
        <item>Foundation</item>
        <item>Brush</item>
        <item>Eyeshadows</item>
        <item>Lipsticks</item>
    </string-array>
    <string-array name="steps_titles">
        <item>Product Information</item>
        <item>Product Image</item>
        <item>Product Summary</item>
    </string-array>
    <string name="submit_text">Submit</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="register_email_address_hint">Email Address</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_comfirm_password_hint">Confirm Password</string>
    <string name="join_us">Join Us</string>
    <string name="process_text">Click to capture</string>
    <string name="cat_loading_text">L O A D I N G ...</string>
    <string name="new_product_text">New Product</string>
    <string name="nav_username_text">Guest</string>
    <string name="nav_email_text">abc@hallo.com</string>
    <string name="product_title_text">title...</string>
    <string name="product_desc_text">desc...</string>
    <string name="product_username_text">username</string>
    <string name="recently_match_product_title_text">title...</string>
    <string name="recently_match_product_desc_text">desc...</string>
    <string name="recently_match_product_username_text">username</string>
    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="fa_icon_piechart">&#xf200;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
    <string name="apply">Apply</string>
    <string name="move_report_text">View Report</string>
    <string name="no_product_text">No product is added</string>
    <string name="own_product">own_product</string>
    <string name="profile_email">handsomeguy@gmail.com</string>
    <string name="profile_username">Handsome Guy</string>
    <string name="own_product_list_row_title_text">title...</string>
    <string name="own_product_list_row_desc_text">desc...</string>
    <string name="own_product_list_row_username_text">username</string>
    <string name="edit_btn_text">Edit</string>
    <string name="own_product_fragment_text">Added Product</string>
    <string name="favourite_product_fragment_text">Favourite Product</string>
    <string name="detect_color_result_title">Pecentage of Primary colors in your skin</string>
    <string name="select_skintype_question">What is your skin type?</string>
    <string name="product_title_text_title">Product Title</string>
    <string name="product_desc_text_title">Description</string>
    <string name="product_brand_text_title">Brand Name</string>
    <string name="product_category_text_title">Category</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="email_text">Email</string>
    <string name="change_avater_text">Change Avatar</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="skin_type_text">Skin Type</string>
    <string name="about_me_text">About Me</string>
    <string name="save">Save</string>
    <string-array name="skin_type_array">
        <item>Fair</item>
        <item>Dry</item>
        <item>Moisture</item>
        <item>Unknown</item>
    </string-array>
    <string name="rating_temp_num">4.0</string>
    <string name="product_name_label">Name</string>
    <string name="brand_name_label">Brand</string>
    <string name="skin_type_name_label">For skin type</string>
    <string name="product_color_label">Color</string>
    <string name="more_product_color_label">More</string>
    <string name="category_type_name_label">Category</string>
    <string name="description_label">Description</string>
    <string name="temp_description_label">The primary purpose of descriptive writing is to describe a person, place or thing in such a way that a picture is formed in the reader\'s mind. Capturing an event through descriptive writing involves paying close attention to the details by using all of your five senses. Teaching students to write more descriptively will improve their writing by making it more interesting and engaging to read.</string>
    <string name="temp_population_number">2,617</string>
    <string name="comment_hint_text">Comment</string>
    <string name="preview_text">Preview:</string>
    <string name="loading_image_error">image loading error !</string>
    <string name="foundation_text">Foundation</string>
    <string name="brush_text">Brush</string>
    <string name="eye_text">Eyeshadows</string>
    <string name="lip_text">Lipsticks</string>
    <string name="compare_btn_text">Compare</string>
    <string name="after_text">After</string>
    <string name="before_text">Before</string>
    <string name="title_activity_nearby_location">Nearby Shops</string>
    <string name="shop_title">Shop name: </string>
    <string name="shop_address">Address :</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="title_activity_shop_location">Shops Location</string>
    <string name="refine_text">REFINE</string>
    <string name="filter_text">Filter</string>
    <string name="acensding_text">Acensding</string>
    <string name="decensding_text">Decensding</string>
    <string name="sort_text">Sort</string>
    <string name="order_text">Order</string>
    <string name="apply_text">Apply</string>
    <string name="clear_text">Clear</string>
    <string name="notification_text">Notification</string>
    <string name="time_temp_text">Time</string>
    <string name="title_activity_settings">Settings</string>
    <string name="category1_text">User controls</string>
    <string name="category2_text">About</string>
    <string name="category1_key">userControls</string>
    <string name="category2_key">about</string>
    <string name="logout_text">Logout</string>
    <string name="logout_description">Click this button to logout</string>
    <string name="aboutUs_text">About us</string>
    <string name="aboutUs_faceT">FaceT =]</string>
    <string name="open_source_licenses_key">openSourceLicenses</string>
    <string name="open_source_licenses_desc">License details for open source library</string>
    <string name="open_source_licenses_text">Open source licenses</string>
    <string name="bottom_title">About</string>
    <string name="rating_display_key">ratingButton</string>
    <string name="rating_display_desc_on">Rating will display on product list</string>
    <string name="rating_display_desc_off">Rating will not display on product list</string>
    <string name="rating_display_text">Display rating</string>
    <string name="notification_receive_key">notificationReceiveButton</string>
    <string name="notification_receive_desc_on">Notification will be received</string>
    <string name="notification_receive_desc_off">Notification will not be received</string>
    <string name="notification_receive_text">Receive notification</string>
    <string name="nearby_button">SHOP NEARBY</string>
    <string name="tab_hkisland">Hong Kong Island</string>
    <string name="tab_kowloon">Kowloon</string>
    <string name="tab_nTerritories">New Territories</string>
    <string name="aboutus_title">FaceT</string>
</resources>