<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_virtual_makeup"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_vmakeup_label" />
        <item
            android:id="@+id/nav_product"
            android:icon="@mipmap/ic_shopping_basket_black_24dp"
            android:title="@string/nav_product_label" />
        <item
            android:id="@+id/nav_store_location"
            android:icon="@mipmap/ic_location_on_black_24dp"
            android:title="@string/nav_store_location_label" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_person_black_24dp"
            android:title="@string/nav_profile_label" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/nav_settings_label" />
    </group>

</menu>
