<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fyp.hkust.facet.activity.PostActivity">

    <!--step 1-->
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/product_brand_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_title"
        android:hint="@string/product_brand_hint"
        android:singleLine="true"
        app:met_floatingLabel="highlight"/>

    <Spinner
        android:id="@+id/product_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_brand_edittext" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_type_spinner"
        android:hint="@string/product_description_hint"
        app:met_errorColor="#ddaa00"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="120" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/product_title_hint"
        android:paddingTop="20px"
        android:singleLine="true"
        app:met_floatingLabel="highlight"/>

    <!--<Button-->
        <!--android:id="@+id/submit_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/product_desc"-->
        <!--android:background="@color/greenishBlue"-->
        <!--android:elevation="2dp"-->
        <!--android:text="@string/submit_text"-->
        <!--android:textColor="#fff" />-->

    <!--<Button-->
        <!--android:id="@+id/cancel_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/product_desc"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:background="@drawable/border_button_no_bg"-->
        <!--android:text="@string/cancel_text"-->
        <!--android:textColor="@color/greenishBlue" />-->


</RelativeLayout>